--- a/todo.txt
+++ b/todo.txt
@@ -1,30 +1,6 @@
 
+* Link on success
 
-
-
-/index.php
-* redirect to https
-* start session
-* login csrf token
-
-
-== session established ==
-
-/index.php?action=login&stage=[init|finish]&token=*
-
-
-
-== logged in ==
-
-
-/index.php?action=home
-* check approval
-
-
-/index.php?action=search
-
-
-/index.php?action=article&stage=[read|edit|submit]
 
 * Check approved
 * Throttle
